--- a/index.html
+++ b/index.html
@@ -139,40 +139,42 @@
         /* Main Content Grid (Sơ đồ lốp và kiểm tra an toàn) */
         .main-content {
             display: grid;
-            grid-template-columns: 1fr 1fr; /* Chia 2 cột cho sơ đồ lốp và kiểm tra an toàn */
-            gap: 0px; /* Giảm khoảng cách giữa 2 cột để dịch chuyển sang phải tối đa */
+            /* Giảm kích thước cột đầu tiên (cho sơ đồ) để tạo khoảng trống */
+            grid-template-columns: 0.8fr 1.2fr; /* Điều chỉnh tỷ lệ cột */
+            gap: 15px; /* Tăng khoảng cách giữa 2 cột */
             margin-bottom: 15px;
         }
 
         /* Tire Section */
         .tire-section {
             display: flex;
-            flex-direction: column; /* Sắp xếp các mục theo cột (sơ đồ + info bên dưới) */
-            align-items: flex-start; /* Căn trái các mục */
+            flex-direction: column; 
+            align-items: center; /* Căn giữa sơ đồ trong cột của nó */
             position: relative;
+            justify-content: flex-start; /* Căn top các mục bên trong */
         }
 
-        .tire-diagram-container { /* Thêm một wrapper để chứa sơ đồ và các ô input lốp */
+        /* Điều chỉnh KÍCH THƯỚC VÀ VỊ TRÍ tổng thể của SƠ ĐỒ LỐP trên màn hình */
+        .tire-diagram-container { 
             position: relative;
-            width: 100%;
-            display: flex; /* Bố cục flex ngang cho sơ đồ và các ô lốp */
-            justify-content: flex-start; /* Căn trái sơ đồ */
-            align-items: flex-start; /* Căn top các mục */
-            height: 230px; /* Chiều cao cố định của vùng sơ đồ */
-            border-bottom: 1px dashed #ccc; /* Đường kẻ phân chia */
-            padding-bottom: 15px; /* Khoảng cách dưới đường kẻ */
-            margin-bottom: 15px; /* Khoảng cách với phần bên dưới (Size lốp, Lưu ý) */
-            margin-left: 55px; /* **Dịch chuyển toàn bộ sơ đồ sang phải thêm 5px** */
+            width: 160px; /* Chiều rộng ảnh sơ đồ */
+            height: 230px; /* Chiều cao ảnh sơ đồ */
+            display: flex; 
+            justify-content: center; /* Căn giữa sơ đồ */
+            align-items: flex-start; 
+            border-bottom: 1px dashed #ccc; 
+            padding-bottom: 15px; 
+            margin-bottom: 15px; 
         }
 
         .tire-diagram {
             position: relative;
-            width: 160px; /* Chiều rộng ảnh sơ đồ */
-            height: 230px; /* Chiều cao ảnh sơ đồ */
+            width: 100%; 
+            height: 100%;
             border: none;
             background: none;
             z-index: 0;
-            flex-shrink: 0; /* Ngăn không cho co lại */
+            flex-shrink: 0; 
         }
 
         .tire-diagram img {
@@ -185,7 +187,7 @@
             object-position: center;
         }
 
-        /* Khung nhập liệu cho từng lốp */
+        /* Khung nhập liệu cho từng lốp - điều chỉnh kích thước và font */
         .tire-position {
             position: absolute;
             background: #000;
@@ -194,30 +196,25 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-            font-size: 10px;
+            font-size: 11px; /* TĂNG FONT CỠ CHỮ CƠ BẢN */
             color: white;
-            padding: 3px 5px;
+            padding: 3px 5px; /* TĂNG PADDING */
             box-sizing: border-box;
             z-index: 1;
-            width: 80px; /* Chiều rộng cố định cho ô nhập */
+            width: 85px; /* TĂNG CHIỀU RỘNG CỐ ĐỊNH cho ô nhập */
             height: auto;
             line-height: 1.1;
             border: 1px solid #000;
         }
 
         /* Tinh chỉnh vị trí các ô nhập liệu Áp suất/Độ dày để khớp với hình ảnh */
-        /* Các giá trị này được điều chỉnh dựa trên link demo và ảnh bạn đã cắt */
-        /* Lốp trước bên trái */
-        .tire-front-left { top: 38px; left: -85px; } 
-        /* Lốp trước bên phải */
-        .tire-front-right { top: 38px; left: 165px; } 
-        /* Lốp sau bên trái */
-        .tire-rear-left { top: 165px; left: -85px; } 
-        /* Lốp sau bên phải */
-        .tire-rear-right { top: 165px; left: 165px; } 
-        /* Lốp dự phòng (nằm dưới cùng của sơ đồ, bên trong container) */
-        .tire-spare { bottom: -10px; left: 50%; transform: translateX(-50%); width: 80px; }
-
+        /* Các giá trị này được điều chỉnh tương đối với .tire-diagram-container mới */
+        /* DI CHUYỂN CÁC Ô SÁT BÁNH XE HƠN, VÀ ĐIỀU CHỈNH LẠI DO THAY ĐỔI KÍCH THƯỚC Ô */
+        .tire-front-left { top: 30px; left: -85px; } 
+        .tire-front-right { top: 30px; left: 160px; } 
+        .tire-rear-left { top: 155px; left: -85px; } 
+        .tire-rear-right { top: 155px; left: 160px; } 
+        .tire-spare { bottom: -10px; left: 50%; transform: translateX(-50%); width: 85px; } /* Giữ nguyên logic giữa nhưng tăng width */
 
         .tire-input-group {
             display: flex;
@@ -231,29 +228,29 @@
         }
 
         .tire-input-group label {
-            font-size: 8px;
+            font-size: 9px; /* TĂNG FONT LABEL */
             white-space: nowrap;
-            margin-right: 2px;
+            margin-right: 2px; 
         }
 
         .pressure-input, .thickness-input {
             background: white;
             border: 1px solid #ccc;
-            width: 28px;
-            height: 13px;
+            width: 35px; /* TĂNG WIDTH INPUT */
+            height: 15px; /* TĂNG HEIGHT INPUT */
             text-align: center;
-            font-size: 7px;
+            font-size: 8px; /* TĂNG FONT INPUT */
             padding: 0 1px;
         }
         .tire-position small {
-            font-size: 6px;
-            margin-left: 1px;
+            font-size: 7px; /* TĂNG FONT ĐƠN VỊ */
+            margin-left: 1px; 
         }
 
-        /* Phần "Size lốp khuyến cáo" và "Lưu ý" được chuyển xuống dưới sơ đồ */
+        /* Phần "Size lốp khuyến cáo" và "Lưu ý" */
         .tire-size-recommendation {
-            width: 100%; /* Chiếm toàn bộ chiều rộng của cột tire-section */
-            margin-bottom: 10px; /* Khoảng cách giữa size và phần Lưu ý */
+            width: 100%; 
+            margin-bottom: 10px; 
         }
 
         .tire-size-recommendation label {
@@ -272,11 +269,11 @@
 
         .recommendation {
             font-size: 11px;
-            width: 100%; /* Chiếm toàn bộ chiều rộng của cột tire-section */
+            width: 100%; 
             display: flex;
             flex-direction: column;
             flex-grow: 1;
-            margin-top: 0; /* Đã có khoảng cách từ tire-size-recommendation */
+            margin-top: 0; 
         }
 
         .recommendation label {
@@ -545,51 +542,66 @@
             .info-group.inline-fields > div { margin-right: 5px; }
             .info-group.inline-fields label { margin-right: 2px; }
 
+            /* Điều chỉnh cho in ấn - QUAN TRỌNG: Sơ đồ lốp và kiểm tra an toàn */
             .main-content { 
-                gap: 0px; /* Giảm gap cho in ấn */
+                /* Điều chỉnh tỷ lệ cột khi in để tạo khoảng trống phù hợp */
+                grid-template-columns: 0.7fr 1.3fr; /* Hàng đầu tiên nhỏ hơn một chút */
+                gap: 5px; /* Giảm gap cho in ấn */
                 margin-bottom: 8px; 
             }
 
-            /* Điều chỉnh cho in ấn - quan trọng */
+            /* Điều chỉnh KÍCH THƯỚC VÀ VỊ TRÍ tổng thể của SƠ ĐỒ LỐP khi in */
             .tire-diagram-container {
-                justify-content: flex-start;
-                height: 160px;
-                padding-bottom: 10px;
-                margin-bottom: 10px;
-                margin-left: 10px; /* Dịch chuyển sang phải một chút khi in */
+                width: 120px !important; /* Thu nhỏ chiều rộng ảnh sơ đồ khi in */
+                height: 180px !important; /* Thu nhỏ chiều cao ảnh sơ đồ khi in */
+                margin-left: auto !important; /* Căn giữa trong khoảng không gian cột */
+                margin-right: auto !important; /* Căn giữa trong khoảng không gian cột */
+                transform: none !important; /* Reset transform scale */
+                padding-bottom: 5px !important;
+                margin-bottom: 5px !important;
             }
 
             .tire-diagram {
-                width: 100px;
-                height: 160px;
+                width: 100% !important;
+                height: 100% !important;
             }
 
+            /* Khung nhập liệu cho từng lốp - điều chỉnh kích thước và font khi in */
             .tire-position {
-                font-size: 7px;
-                padding: 1px 2px;
-                width: 55px;
-                border-radius: 3px;
-                line-height: 1;
+                font-size: 8px !important; /* TĂNG FONT CỠ CHỮ CƠ BẢN KHI IN */
+                padding: 2px 3px !important; /* TĂNG PADDING KHI IN */
+                width: 60px !important; /* TĂNG CHIỀU RỘNG CỐ ĐỊNH CHO Ô NHẬP KHI IN */
+                height: auto !important;
+                line-height: 1 !important; /* TĂNG LINE-HEIGHT KHI IN */
+                border-radius: 3px !important;
             }
 
-            /* Vị trí ô nhập liệu khi in */
-            .tire-front-left { top: 25px; left: -60px; }
-            .tire-front-right { top: 25px; left: 105px; }
-            .tire-rear-left { top: 105px; left: -60px; }
-            .tire-rear-right { top: 105px; left: 105px; }
-            .tire-spare { bottom: 0px; left: 50%; transform: translateX(-50%); width: 55px; }
+            /* Vị trí ô nhập liệu khi in (tương đối với sơ đồ đã thu nhỏ và căn giữa) */
+            /* Cần tinh chỉnh lại các giá trị này để khớp đúng trên sơ đồ đã điều chỉnh */
+            /* DI CHUYỂN CÁC Ô SÁT BÁNH XE HƠN, VÀ ĐIỀU CHỈNH LẠI DO THAY ĐỔI KÍCH THƯỚC Ô */
+            .tire-front-left { top: 25px !important; left: -60px !important; } /* Đã điều chỉnh */
+            .tire-front-right { top: 25px !important; left: 130px !important; } /* Đã điều chỉnh */
+            .tire-rear-left { top: 110px !important; left: -60px !important; } /* Đã điều chỉnh */
+            .tire-rear-right { top: 110px !important; left: 130px !important; } /* Đã điều chỉnh */
+            .tire-spare { bottom: 0px !important; left: 50% !important; transform: translateX(-50%) !important; width: 60px !important; } /* Tăng width khi in */
 
-            .tire-input-group label { font-size: 5px; margin-right: 1px; }
+            .tire-input-group label { 
+                font-size: 7px !important; /* TĂNG FONT LABEL KHI IN */
+                margin-right: 1px !important; 
+            }
             .pressure-input, .thickness-input {
-                width: 20px;
-                height: 8px;
-                font-size: 5px;
-                padding: 0;
+                width: 25px !important; /* TĂNG WIDTH INPUT KHI IN */
+                height: 12px !important; /* TĂNG HEIGHT INPUT KHI IN */
+                font-size: 7px !important; /* TĂNG FONT INPUT KHI IN */
+                padding: 0 1px !important;
             }
-            .tire-position small { font-size: 4px; margin-left: 0; }
+            .tire-position small { 
+                font-size: 6px !important; /* TĂNG FONT ĐƠN VỊ KHI IN */
+                margin-left: 1px !important; 
+            }
 
             .tire-section > .tire-size-recommendation {
-                margin-top: 10px;
+                margin-top: 5px !important;
             }
             .tire-size-recommendation label { margin-bottom: 1px; font-size: 8px; }
             .tire-size-recommendation input { min-width: 70px; font-size: 8px; }
@@ -1241,7 +1253,8 @@
             // Event listener for the "Send Information" button
             const submitButton = document.getElementById('submitToSheet');
             if (submitButton) {
-                submitButton.addEventListener('click', () => {
+                submitButton.addEventListener('click', (event) => { // Added event parameter
+                    event.preventDefault(); // Prevent default form submission
                     const scriptURL = form.action; // Get URL from form's action attribute
 
                     // Simple form validation: check if required fields are filled
