--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -288,6 +288,7 @@
 
         <div class="controls">
             <div class="buttons">
+                <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'">📄 Tra cứu thông tin xe</button>
                 <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu Kiểm Tra Xe</button>
                 <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
                 <button class="btn btn-primary" id="updatePreviewBtn">Cập nhật xem trước</button>
