--- a/tracuu.html
+++ b/tracuu.html
@@ -121,6 +121,7 @@
                 <label for="licensePlate" class="block text-sm">Biển số xe:</label>
                 <input type="text" id="licensePlate" placeholder="Nhập biển số xe" class="mt-1">
             </div>
+            <title>Tra Cứu Thông Tin Xe chỉ nhập 1 trong 2 thông tin tra cứu Biển số hoặc số điện thoại </title>
             <div class="input-group">
                 <label for="phoneNumber" class="block text-sm">Số điện thoại:</label>
                 <input type="text" id="phoneNumber" placeholder="Nhập số điện thoại" class="mt-1">
