--- a/tracuu.html
+++ b/tracuu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tra Cứu Thông Tin Xe</title>
+    <h1 style="font-size: 12px;">Tra Cứu Thông Tin Xe chỉ nhập 1 trong 2 thông tin tra cứu Biển số hoặc số điện thoại</h1>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -121,7 +122,6 @@
                 <label for="licensePlate" class="block text-sm">Biển số xe:</label>
                 <input type="text" id="licensePlate" placeholder="Nhập biển số xe" class="mt-1">
             </div>
-            <title>Tra Cứu Thông Tin Xe chỉ nhập 1 trong 2 thông tin tra cứu Biển số hoặc số điện thoại </title>
             <div class="input-group">
                 <label for="phoneNumber" class="block text-sm">Số điện thoại:</label>
                 <input type="text" id="phoneNumber" placeholder="Nhập số điện thoại" class="mt-1">
