--- a/tracuu.html
+++ b/tracuu.html
@@ -157,6 +157,7 @@
         </div>
     <div class="container">
         <h1 class="text-3xl font-bold text-gray-800 mb-8 text-center">Tra Cứu Thông Tin Xe</h1>
+        <h2 style="font-size: 12px;">Tra Cứu Thông Tin Xe chỉ nhập biển số hoặc số điện thoại </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
             <div class="input-group">
