--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
 
         .safety-grid {
             display: grid;
-            grid-template-columns: 3fr 1fr 1fr 1fr;
+            /* ĐIỀU CHỈNH: Thu hẹp cột "HẠNG MỤC" từ 3fr xuống 2.5fr */
+            grid-template-columns: 2.5fr 1fr 1fr 1fr;
             gap: 5px;
             font-size: 11px;
             flex-grow: 1;
@@ -340,6 +341,8 @@
             padding: 3px;
             border-bottom: 1px dotted #ccc;
             text-align: left;
+            /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng kiểm tra an toàn */
+            font-weight: bold;
         }
 
         .checkbox-cell {
@@ -382,7 +385,12 @@
         }
 
         .detailed-check .stt { width: 30px; }
-        .detailed-check .hang-muc { width: 120px; text-align: left; }
+        .detailed-check .hang-muc {
+            width: 120px;
+            text-align: left;
+            /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng chi tiết */
+            font-weight: bold;
+        }
         .detailed-check .dien-giai { width: 180px; }
         .detailed-check .sl { width: 50px; }
         .detailed-check .don-gia, .detailed-check .thanh-tien { width: 90px; }
@@ -406,7 +414,11 @@
             background: transparent;
         }
 
-        .detailed-check input[type="text"].hang-muc-input { text-align: left; }
+        .detailed-check input[type="text"].hang-muc-input {
+            text-align: left;
+            /* ĐIỀU CHỈNH: In đậm chữ trong ô input của cột "Hạng Mục" */
+            font-weight: bold;
+        }
 
         .detailed-check input[type="checkbox"] {
             width: 15px;
@@ -627,12 +639,27 @@
             .safety-grid { flex-grow: 0; height: auto; font-size: 9px; gap: 2px; }
             .safety-title { padding: 3px; font-size: 11px; margin: -5px -5px 5px -5px; }
             .checkbox { width: 12px; height: 12px; }
-            .item-name { padding: 1px; font-size: 9px; }
+            .item-name {
+                padding: 1px;
+                font-size: 9px;
+                /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng kiểm tra an toàn khi in */
+                font-weight: bold;
+            }
 
             .detailed-check { margin-top: 8px; font-size: 9px; }
             .detailed-check th, .detailed-check td { padding: 2px; font-size: 9px; }
             .detailed-check input[type="text"], .detailed-check input[type="number"] { font-size: 9px; }
             .detailed-check input[type="checkbox"] { width: 12px; height: 12px; }
+
+            .detailed-check .hang-muc {
+                /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng chi tiết khi in */
+                font-weight: bold;
+            }
+            .detailed-check input[type="text"].hang-muc-input {
+                /* ĐIỀU CHỈNH: In đậm chữ trong ô input của cột "Hạng Mục" khi in */
+                font-weight: bold;
+            }
+
 
             .footer { font-size: 8px; margin-top: 8px; padding-top: 5px; line-height: 1.1; }
 
@@ -838,7 +865,7 @@
                                 <div class="item-name">Đĩa phanh</div>
                                 <div class="checkbox-cell"><input type="checkbox" class="checkbox" name="safety_DiaPhanh_Tot" value="on"></div>
                                 <div class="checkbox-cell"><input type="checkbox" class="checkbox" name="safety_DiaPhanh_LuuY" value="on"></div>
-                                <div class="checkbox-cell"><input type="checkbox" name="safety_DiaPhanh_Thay" value="on"></div>
+                                <div class="checkbox-cell"><input type="checkbox" class="checkbox" name="safety_DiaPhanh_Thay" value="on"></div>
                             </div>
 
                             <div class="safety-item">
